# Spotify2Apple

./: Dockerfile  README.md  pyproject.toml
src/spotify_share/: bot.py  lib.py
terraform/: main.tf
tests/: test_spotify_share.py
