[tool.poetry]
name = "spotify_share"
version = "0.1.0"
description = ""
authors = ["idobn <ido.bennatan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.30.1"
black = "^21.12b0"
mypy = "^0.910"
types-requests = "^2.26.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
